RESOLVED FIXED206045
REGRESSION(r253868): Socket-based remote inspector cannot inspect any target
https://bugs.webkit.org/show_bug.cgi?id=206045
Summary REGRESSION(r253868): Socket-based remote inspector cannot inspect any target
Ross Kirsling
Reported 2020-01-09 17:31:07 PST
Attachments
Patch (5.50 KB, patch)
2020-01-09 18:00 PST, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2020-01-09 18:00:28 PST
WebKit Commit Bot
Comment 2 2020-01-09 20:44:46 PST
Comment on attachment 387299 [details] Patch Clearing flags on attachment: 387299 Committed r254325: <https://trac.webkit.org/changeset/254325>
WebKit Commit Bot
Comment 3 2020-01-09 20:44:48 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-01-09 20:45:19 PST
Note You need to log in before you can comment on or make changes to this bug.