REGRESSION(r253868): Socket-based remote inspector cannot inspect any target https://bugs.webkit.org/show_bug.cgi?id=206045

Reviewed by Don Olmstead.

Revert part of patch, ensuring Target struct stays consistent with socket inspector's messaging protocol.

* UIProcess/socket/RemoteInspectorClient.cpp:
(WebKit::RemoteInspectorClient::setTargetList):
(WebKit::debuggableTypeToString): Deleted.
* UIProcess/socket/RemoteInspectorClient.h:
* UIProcess/socket/RemoteInspectorProtocolHandler.cpp:
(WebKit::RemoteInspectorProtocolHandler::targetListChanged):
(WebKit::debuggableTypeToString): Deleted.


Canonical link: https://commits.webkit.org/219168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254325 268f45cc-cd09-0410-ab3c-d52691b4dbfc