Source/WebKit/UIProcess/socket/RemoteInspectorProtocolHandler.cpp
@@ -95,23 +95,6 @@ static Optional<Inspector::DebuggableType> parseDebuggableTypeFromString(const S
     return WTF::nullopt;
 }
 
-static String debuggableTypeToString(Inspector::DebuggableType debuggableType)
-{
-    switch (debuggableType) {
-    case Inspector::DebuggableType::JavaScript:
-        return "javascript"_s;
-    case Inspector::DebuggableType::Page:
-        return "page"_s;
-    case Inspector::DebuggableType::ServiceWorker:
-        return "service-worker"_s;
-    case Inspector::DebuggableType::WebPage:
-        return "web-page"_s;
-    }
-
-    ASSERT_NOT_REACHED();
-    return String();
-}
-
 void RemoteInspectorProtocolHandler::inspect(const String& hostAndPort, ConnectionID connectionID, TargetID targetID, const String& type)
 {
     auto debuggableType = parseDebuggableTypeFromString(type);
@@ -145,7 +128,7 @@ void RemoteInspectorProtocolHandler::targetListChanged(RemoteInspectorClient& cl
                 html.append(makeString(
                     "<tbody><tr>"
                     "<td class=\"data\"><div class=\"targetname\">", target.name, "</div><div class=\"targeturl\">", target.url, "</div></td>"
-                    "<td class=\"input\"><input type=\"button\" value=\"Inspect\" onclick=\"window.webkit.messageHandlers.inspector.postMessage(\\'", connectionID, ":", target.id, ":", debuggableTypeToString(target.type), "\\');\"></td>"
+                    "<td class=\"input\"><input type=\"button\" value=\"Inspect\" onclick=\"window.webkit.messageHandlers.inspector.postMessage(\\'", connectionID, ":", target.id, ":", target.type, "\\');\"></td>"
                     "</tr></tbody>"
                 ));
             }
